# iceClean

./: .gitignore  CMakeLists.txt  CMakePresets.json  build_local.bat  vcpkg-configuration.json  vcpkg.json
.github/workflows/: build.yml
.trae/documents/: iceclean-c-drive-cleaner-plan.md  iceclean-dev-cache-plan.md  iceclean-improvement-plan.md
src/: App.cpp  App.h  CMakeLists.txt  main.cpp
src/core/analyzer/: DiskSpaceAnalyzer.cpp  DiskSpaceAnalyzer.h  TreemapBuilder.cpp  TreemapBuilder.h
src/core/cleaner/: BrowserCleaner.cpp  BrowserCleaner.h  CleanerBase.cpp  CleanerBase.h  DismCleaner.cpp  DismCleaner.h  FileCleaner.cpp  FileCleaner.h  HibernationCleaner.cpp  HibernationCleaner.h  ICleaner.h  PrivacyCleaner.cpp  PrivacyCleaner.h  RecycleBinCleaner.cpp  RecycleBinCleaner.h  RegistryCleaner.cpp  RegistryCleaner.h
src/core/migrator/: DevCacheMigrator.cpp  DevCacheMigrator.h  FolderMigrator.cpp  FolderMigrator.h  IMigrator.h  LargeFolderDetector.cpp  LargeFolderDetector.h  MigratorBase.cpp  MigratorBase.h  QQMigrator.cpp  QQMigrator.h  SteamMigrator.cpp  SteamMigrator.h  UserFolderMigrator.cpp  UserFolderMigrator.h  WeChatMigrator.cpp  WeChatMigrator.h
src/core/optimizer/: ScheduledTaskOptimizer.cpp  ScheduledTaskOptimizer.h  ServiceOptimizer.cpp  ServiceOptimizer.h  StartupOptimizer.cpp  StartupOptimizer.h
src/core/safety/: OperationLogger.cpp  OperationLogger.h  RestorePointManager.cpp  RestorePointManager.h  SafetyRating.h  WhitelistProvider.cpp  WhitelistProvider.h
src/core/scanner/: BrowserCacheScanner.cpp  BrowserCacheScanner.h  CrashDumpScanner.cpp  CrashDumpScanner.h  DevCacheScanner.cpp  DevCacheScanner.h  DriverBackupScanner.cpp  DriverBackupScanner.h  HibernationScanner.cpp  HibernationScanner.h  IScanner.h  LogScanner.cpp  LogScanner.h  PrefetchScanner.cpp  PrefetchScanner.h  RecycleBinScanner.cpp  RecycleBinScanner.h  ScannerAggregator.cpp  ScannerAggregator.h  ScannerBase.cpp  ScannerBase.h  SystemTempScanner.cpp  SystemTempScanner.h  ThumbnailScanner.cpp  ThumbnailScanner.h  WinSxSScanner.cpp  WinSxSScanner.h  WindowsUpdateScanner.cpp  WindowsUpdateScanner.h
src/gui/: Events.cpp  Events.h  MainWindow.cpp  MainWindow.h
src/gui/controls/: CardPanel.cpp  CardPanel.h  CircularProgress.cpp  CircularProgress.h  NavSidebar.cpp  NavSidebar.h  SafetyBadge.cpp  SafetyBadge.h
src/gui/dialogs/: ConfirmDialog.cpp  ConfirmDialog.h  MigrationProgressDlg.cpp  MigrationProgressDlg.h
src/gui/panels/: DashboardPanel.cpp  DashboardPanel.h  DeepCleanPanel.cpp  DeepCleanPanel.h  DiskAnalyzerPanel.cpp  DiskAnalyzerPanel.h  MigrationPanel.cpp  MigrationPanel.h  ScanResultPanel.cpp  ScanResultPanel.h  SettingsPanel.cpp  SettingsPanel.h  StartupPanel.cpp  StartupPanel.h
src/gui/resources/: app.manifest  app.rc  resource.h
src/models/: CleanItem.h  DiskNode.h  MigrationItem.h  OperationRecord.h  ScanResult.h  StartupItem.h
src/utils/: DismUtil.cpp  DismUtil.h  FileUtil.cpp  FileUtil.h  FormatUtil.cpp  FormatUtil.h  JsonUtil.cpp  JsonUtil.h  JunctionPoint.cpp  JunctionPoint.h  RegistryUtil.cpp  RegistryUtil.h  ShellUtil.cpp  ShellUtil.h  Win32Util.cpp  Win32Util.h
